# honey.data

./: .gitignore  Makefile  README.md  monitor.py  pyproject.toml  requirements.txt
infrastructure/: iam.tf  main.tf  s3.tf
infrastructure/systemd/: honey-data-monitor.service  honey-data-upload.service
infrastructure/terraform/: athena.tf  glue.tf  iam.tf  main.tf  s3.tf
jobs/: common.py  monitor.py  upload.py
notebooks/: data_plotting.ipynb  fix_corrupt_data.ipynb  query_prototyping.ipynb
